--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     background-color: #09090A;
     color: white;
+    font-family: 'Inter';
 
     height: 100vh;
 }
@@ -26,7 +27,7 @@ header {
 button {
     padding: 16px 24px;
     border-radius: 8px;
-    border: 1px solid #8B5Cf6;
+    border: 1px solid #EAB308;
 
     background-color: transparent;
     color: white;
@@ -35,7 +36,6 @@ button {
     align-items: center;
     gap: 12px;
 
-    font-family: 'Inter';
     font-weight: 600;
     line-height: 125%;
 
@@ -60,12 +60,14 @@ button:hover {
     gap: 24px;
 }
 
-.habit {
-    width: 64px;
-    height: 64px;
+.habits img {
+    width: 32px;
+}
 
+.habit {
     font-size: 32px;
 
+    height: 64px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -75,6 +77,8 @@ button:hover {
     display: flex;
     gap: 48px;
     margin-left: 32px;
+
+    font-family: 'Roboto Mono';
 }
 
 .day {
@@ -86,11 +90,10 @@ button:hover {
 .day div {
     margin-bottom: 8px;
 
-    font-family: 'Roboto Mono';
     font-size: 20px;
     line-height: 125%;
 
-    color: #a78bfa;
+    color: #EAB308;
 
     text-align: center;
 }
@@ -109,8 +112,8 @@ input {
 }
 
 input:checked {
-    background: #8B5Cf6;
-    border: 2px solid #a78bfa;
+    background: #EAB308;
+    border: 2px solid #CA8A04;
 }
 
 @media (max-width: 570px) {
